takamaka_examples/src/takamaka/tests/errors/legalcall1/Super.java
package takamaka.tests.errors.legalcall1;

public class Super {

	@Override
	public int hashCode() {
		return 42;
	}
}